--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,5 +4,29 @@
     "experiences": "Expériences",
     "projects": "Projets",
     "contacts": "Contact"
+  },
+  "intro": {
+    "subtitle": "Développeur Full Stack"
+  },
+  "experiences": {
+    "labels": {
+      "website": "Site web"
+    },
+    "ludonope": {
+      "date": "Septembre 2019",
+      "description": "Un site web responsive, multilangue et animé fait à la main avec Vue.js, Typescript et du savoir."
+    },
+    "blt": {
+      "date": "Janvier 2018 - Juillet 2018",
+      "description": "Beach Launch Team est un club de fusée à ergols liquide à California State University Long Beach. J'ai travaillé sur un logiciel de visualisation live de la trajectoire du véhicule avec Cesium.js. J'ai également participé à une mise à feu statique et une tentative de décollage pour la compétition FAR-Mars. Enfin, j'ai rencontré des gens incroyable."
+    },
+    "rematch": {
+      "date": "Avril 2018 - Aujourd'hui",
+      "description": "Rematch est une application qui permet de facilement capturer les meilleurs moments du sport amateur. J'ai dirigé la mise en place d'un nouveau backend avec AWS (Lambda, API Gateway, Cognito, EC2) et Go. J'ai également guidé la mise en place d'un nouveau frontend en Vue.js et le déploiement sur AWS (S3, Cloudfront)."
+    },
+    "manacore": {
+      "date": "Septembre 2017 - Aujourd'hui",
+      "description": "Manacore est un logiciel de gestion modulaire en SaaS qui fournit à votre entreprise une multitude de services faciles à utiliser, 100% personalisable. Manacore utilises l'écosystème AWS (Lambda, API Gateway, Cognito, Cloudfront, S3, SNS, SQS) et un système modulaire fait maison en Vue.js. Manacore est mon projet de fin d'études avec 5 autres étudiants."
+    }
   }
 }
