--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,7 +6,8 @@
     "contacts": "CONTACT"
   },
   "intro": {
-    "subtitle": "Développeur Full Stack"
+    "subtitle": "Développeur Full Stack",
+    "bio": "À l’âge de 8 ans, je recherche sur google “apprendre à hacker”. Je découvre alors le monde de l’informatique et la programmation grâce au siteduzero (ex openclassroom) avec le langage C, puis C++. Cela m’a permi d’acquérir très jeune des notions d’algorithmie et de programmation orientée objet. Depuis, je ne cesse de suivre ce rêve d’enfant, qui s’est aujourd’hui transformé en une véritable passion."
   },
   "experiences": {
     "labels": {
