--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,7 @@
   },
   "intro": {
     "subtitle": "Full Stack Software Engineer",
-    "bio": "At the age of 8, I searched “how to hack” on google. This lead me to discover the world of computer science and programming beginning with C, then C++. This allowed me in my youth to hone my skills with algorithms and object-oriented programming. From then on, I have continued to follow this childhood dream, which has now become a full fledged passion."
+    "bio": "At the age of 8, I searched “how to hack” on Google. This led me to discover the world of computer science and programming beginning with C, then later C++ and beyond. This allowed me to hone my skills with algorithms and object-oriented programming from a very young age. From then on, I have continued to follow this childhood dream, which has now become a full-fledged passion."
   },
   "experiences": {
     "labels": {
