--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
     "projects": "PROJECTS",
     "education": "EDUCATION",
     "skills": "SKILLS",
-    "contacts": "CONTACTS"
+    "contacts": "CONTACT"
   },
   "intro": {
     "subtitle": "Full Stack Software Engineer",
