--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,11 +16,11 @@
     },
     "ludonope": {
       "date": "September 2019",
-      "description": "A responsive, multilingual and animated website that I created with with Vue.js, Typescript and knowledge."
+      "description": "A responsive, multilingual and animated website that I created with Vue.js, Typescript and knowledge."
     },
     "blt": {
       "date": "January 2019 - July 2019",
-      "description": "Beach Launch Team is a liquid-fueled rocketry club at California State University Long Beach. I developed a live vehicle tajectory visualization software using Cesium.js. I also participated to a static fire and launch attempt for the FAR-Mars competition. Moreover, that experience allowed me to meet incredible people, and further my computer science skills."
+      "description": "Beach Launch Team is a liquid-fueled rocketry club at California State University Long Beach. I developed a live vehicle trajectory visualization software using Cesium.js. I also participated to a static fire and launch attempt for the FAR-Mars competition. Moreover, that experience allowed me to meet incredible people, and further my computer science skills."
     },
     "rematch": {
       "date": "April 2018 - Today",
