--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -7,12 +7,16 @@
     "contacts": "CONTACT"
   },
   "intro": {
-    "subtitle": "Développeur Full Stack",
-    "bio": "À l’âge de 8 ans, je recherche sur Google “apprendre à hacker”. Je découvre alors le monde de l’informatique et la programmation grâce au siteduzero (ex openclassroom) avec le langage C, puis C++. Cela m’a permi d’acquérir très jeune des notions d’algorithmie et de programmation orientée objet. Depuis, je ne cesse de suivre ce rêve d’enfant, qui s’est aujourd’hui transformé en une véritable passion."
+    "subtitle": "CEO | CTO @ Moonly",
+    "bio": "À l’âge de 8 ans, je recherche sur Google “apprendre à hacker”. Je découvre alors le monde de l’informatique et la programmation grâce au siteduzero (ex openclassroom) avec le langage C, puis C++. Cela m’a permis d’acquérir très jeune des notions d’algorithmie et de programmation orientée objet. Depuis, je ne cesse de suivre ce rêve d’enfant, qui s’est aujourd’hui transformé en une véritable passion."
   },
   "experiences": {
     "labels": {
       "website": "Site web"
+    },
+    "moonly": {
+      "date": "Février 2020",
+      "description": "Application mobile de suivi du cycle menstruel à l'aide de la méthode symptothermique. Cette méthode peut être utilisée en contraception (98 % d'efficacité selon l'OMS), conception ou observation."
     },
     "ludonope": {
       "date": "Septembre 2019",
